Bug 1614718 - Add two missing includes to unbust thunderbird. a=Aryx

Differential Revision: https://phabricator.services.mozilla.com/D62474